# C4D-ChamferMaker-R12

./: .gitignore  AMa_ChamferMaker.dylib  AMa_ChamferMaker.sln  AMa_ChamferMaker.vcxproj  AMa_ChamferMaker.vcxproj.filters  Makefile.am  README.markdown
AMa_ChamferMaker.xcodeproj/: project.pbxproj
res/: AMa_ChamferMaker.tif  AMa_ChamferMaker_Small.tif  ChamferMaker.tif  ChamferMaker_big.tif  ChamferMaker_small.tif  c4d_symbols.h
res/description/: O_AMa_ChamferMaker.h  O_AMa_ChamferMaker.res
res/strings_us/: c4d_strings.str
res/strings_us/description/: O_AMa_ChamferMaker.str
source/: AMa_ChamferMaker.cpp  main.cpp
